# cdp-sdk

./: .gitignore  CONTRIBUTING.md  Makefile  RELEASE.md  openapi.yaml  rust-toolchain.toml
.claude/commands/: release.md  triage-issues.md
.github/workflows/: check-generated-clients.yml  deploy-gh-pages.yml  java_e2e_test.yml  java_lint.yml  java_publish.yml  java_publish_github_packages.yml  java_test.yml  typescript_publish.yml  update_openapi.yml
examples/go/: go.mod  go.sum
examples/java/: .env.example  .gitignore  .project  README.md  build.gradle.kts  settings.gradle.kts
examples/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
go/: README.md  cdp.go
go/openapi/: client.gen.go
java/: .gitignore  CHANGELOG.md  Makefile  README.md  build.gradle.kts  client_config.yaml  cliff.toml  settings.gradle.kts
java/changelog.d/: .gitignore
java/scripts/: fix-generated-code.sh
python/: CHANGELOG.md  README.md  pyproject.toml
python/cdp/: __init__.py  analytics.py  cdp_client.py  end_user_account.py  end_user_client.py  solana_account.py  solana_client.py
python/cdp/auth/utils/: http.py
python/cdp/openapi_client/: __init__.py
python/cdp/openapi_client/api/: __init__.py  end_user_accounts_api.py  evm_accounts_api.py  onramp_api.py  solana_accounts_api.py  sqlapi_alpha_api.py  webhooks_api.py  x402_facilitator_api.py
python/cdp/openapi_client/models/: __init__.py  authentication_method.py  create_evm_eip7702_delegation201_response.py  create_onramp_session_request.py  error_type.py  inline_object1.py  o_auth2_provider_type.py  rule.py  webhook_subscription_request.py  webhook_subscription_response.py  webhook_subscription_update_request.py  x402_payment_payload.py  x402_resource_info.py  x402_settle_error_reason.py  x402_settle_payment_rejection.py  x402_supported_payment_kind.py  x402_v1_payment_payload.py  x402_v1_payment_payload_payload.py  x402_v1_payment_requirements.py  x402_verify_payment_rejection.py
python/cdp/openapi_client/test/: test_authentication_method.py  test_create_end_user_request.py  test_create_evm_eip7702_delegation201_response.py  test_create_onramp_session_request.py  test_end_user.py  test_end_user_accounts_api.py  test_import_end_user_request.py  test_inline_object1.py  test_list_end_users200_response.py  test_onramp_api.py  test_rule.py  test_webhook_subscription_list_response.py  test_webhook_subscription_request.py  test_webhook_subscription_response.py  test_webhook_subscription_update_request.py  test_x402_payment_payload.py  test_x402_payment_requirements.py  test_x402_resource_info.py  test_x402_settle_payment_rejection.py  test_x402_v1_payment_payload.py  test_x402_v1_payment_payload_payload.py  test_x402_v1_payment_requirements.py  test_x402_v2_payment_payload.py  test_x402_verify_payment_rejection.py
python/cdp/policies/: request_transformer.py  response_transformer.py  types.py
python/cdp/test/: test_e2e.py  test_end_user_account.py  test_end_user_client.py  test_evm_client.py
python/changelog.d/: 622.misc.md  623.bugfix.md
python/docs/: conf.py
rust/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
rust/src/: api.rs
typescript/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
typescript/.changeset/: fair-paths-smile.md
typescript/patches/: @orval__core@7.21.0.patch
typescript/src/: CHANGELOG.md  README.md  analytics.ts  e2e.test.ts  index.ts  package.json  version.ts
(+449 files in other folders)
